fixed overflow scroll in side header

--- a/css/main.css
+++ b/css/main.css
@@ -259,7 +259,7 @@ input[type="submit"]:focus {
     min-height: inherit;
     text-align: center;
     padding: 70px 30px 45px;
-    overflow: auto;
+    overflow: hidden;
   }
 
   .header-titles {
